# Libs

./: .gitignore  .gitmodules  BaltimoreDataBase.json  CMakeLists.txt  FlameIDE.cbp  FlameIDE.cbp.bak  FlameIDE.depend  FlameIDE.layout  GNUMakefile  Libs.pro  Makefile  Makefile.config  Makefile.custom  README.md  add_files.sh  bitbucket-pipelines.yml  build_debug  build_debug.sh  build_release  build_release.sh  change_buildnumber  cmake_add_files.sh  gen.sh  global.pri  libs.pro
include/FlameIDE/: CMakeLists.txt
include/FlameIDE/About/: About.hpp  CMakeLists.txt  Headers.cmake
include/FlameIDE/Bsp/: CMakeLists.txt
include/FlameIDE/Bus/: CMakeLists.txt  Headers.cmake  MsgInterface.hpp
include/FlameIDE/Common/: Byte.hpp  CMakeLists.txt  Constants.hpp  ConstexprPointer.hpp  Expected.hpp  FunctorBase.hpp  Headers.cmake  Macros.hpp  Macroses.hpp  OsTypes.hpp  PrimitiveTypes.hpp  ReferenceWrapper.hpp  Traits.hpp  Utils.hpp
include/FlameIDE/Constants/: C.hpp  CMakeLists.txt  CPP.hpp  Headers.cmake
include/FlameIDE/Crypto/: CMakeLists.txt
include/FlameIDE/Filesystem/: BasicFile.hpp  Project.hpp  Session.hpp
include/FlameIDE/Json/: CMakeLists.txt  Headers.cmake  Json.hpp
include/FlameIDE/Lsp/: AbstractMessage.hpp  BaseTypes.hpp  CMakeLists.txt  Content.hpp  Headers.cmake  NotificationMessage.hpp  RequestMessage.hpp  ResponseMessage.hpp
include/FlameIDE/Os/: CMakeLists.txt  Constants.hpp  File.hpp  Headers.cmake  Ipv4.hpp  Library.hpp  NamedPipe.hpp  NetworkBase.hpp  Pipe.hpp  Random.hpp  TcpClient.hpp  TcpServer.hpp  Thread.hpp  Types.hpp  UdpClient.hpp  UdpServer.hpp
include/FlameIDE/Others/: CMakeLists.txt  Headers.cmake  TextStyle.hpp
include/FlameIDE/Process/: CommandLine.hpp
include/FlameIDE/Streams/: CMakeLists.txt  DefaultAccumulator.hpp  FileStreamReader.hpp  FileStreamWriter.hpp  Headers.cmake  NamedPipeReader.hpp  NamedPipeStream.hpp  NamedPipeWriter.hpp  PipeStream.hpp  RamStream.hpp  Reader.hpp  Socket.hpp  SocketClient.hpp  SocketServer.hpp  SocketUtils.hpp  StreamBase.hpp  StreamUtils.hpp  Writer.hpp
include/FlameIDE/Templates/: AlignObject.hpp  Allocator.hpp  Array.hpp  ArrayBlocks.hpp  AsIntegralType.hpp  BinaryTrees.hpp  BitSet.hpp  Bits.hpp  Builder.hpp  ByteOrder.hpp  CMakeLists.txt  CircularArray.hpp  CircularVector.hpp  Comparators.hpp  CycleInteger.hpp  Expected.hpp  Function.hpp  Future.hpp  Headers.cmake  HybridVector.hpp  InitializerList.hpp  IntegerIterator.hpp  Iterator.hpp  List.hpp  MaybeMonad.hpp  Object.hpp  ObjectViewer.hpp  Optional.hpp  Pair.hpp  Pointers.hpp  RaiiCaller.hpp  Range.hpp  Serialization.hpp  SimpleAlgorithms.hpp  StaticAllocator.hpp  String.hpp  StringConvertions.hpp  Templates.hpp  ThreadSafeObject.hpp  Tree.hpp  (+7 more)
include/FlameIDE/Threads/: CMakeLists.txt  Headers.cmake  Mutex.hpp  Semaphore.hpp  Thread.hpp
include/FlameIDE/Ubjson/: Array.hpp  BaseValue.hpp  CMakeLists.txt  (+12 more)
src/: CMakeLists.txt  Makefile  Makefile.backup  Makefile.config  main.cpp
src/About/: About.h
src/Actions/: ArgsParser.cpp  ArgsParser.h  CodeParcer.cpp  CodeParcer.h  CommandLine.cpp  CommandLine.cpp.bak  CommandLine.h  CommandLine.h.bak
src/Analysers/: ArgsParser.cpp  CMakeLists.txt  CodeParcer.cpp  CodeParcer.hpp  Sources.cmake
src/Bus/: CMakeLists.txt  Consts_C.h  Consts_C.h.bak  Files.cmake  MsgInterface.cpp  MsgInterface.h  Sources.cmake
src/Common/: Byte.hpp  CMakeLists.txt  Macroses.hpp  PrimitiveTypes.hpp  Traits.hpp  Utils.hpp
src/Constants/: C.h  CPP.h
src/Crypto/: CMakeLists.txt  Sources.cmake
src/Filesystem/: BasicFile.cpp  Project.cpp  Project.hpp  Session.cpp  Session.hpp
src/Json/: CMakeLists.txt
src/Lsp/: CMakeLists.txt
src/Os/: CMakeLists.txt  CommonFunctions.hpp  ErrorToString.hpp  File.cpp  FileFunctions.hpp  Headers.cmake  Ipv4.cpp  Library.cpp  LibraryFunctions.hpp  NamedPipe.cpp  NamedPipeFunctions.hpp  NetworkBase.cpp  Pipe.cpp  PipeFunctions.hpp  ProcessFunctions.hpp  SocketFunctions.hpp  Sources.cmake  TcpClient.cpp  TcpServer.cpp  TcpSocketFunctions.hpp  Thread.cpp  ThreadFunctions.hpp  UdpClient.cpp  UdpServer.cpp  UdpSocketFunctions.hpp
src/Others/: Array.h  Bits.cpp  Bits.h  Bits.hpp  List.h  PrimitiveTypes.h  PrimitiveTypes.hpp  TextStyle.h
src/Process/: CommandLine.cpp
src/Store/: Array.h  BasicFile.cpp  BasicFile.h  File.cpp  File.h  JSON.cpp  JSON.h  Project.cpp  Project.h  Session.cpp  Session.h  Session.h.bak
src/Streams/: CMakeLists.txt  CommonFuncitons.hpp  CommonFunctions.cpp  DefaultAccumulator.cpp  Files.cmake  Headers.cmake  PipeStream.cpp  RamStream.cpp  SocketUtils.cpp  Sources.cmake  StreamBase.cpp  StreamBase.hpp  StreamUtils.cpp
src/Templates/: AlignObject.hpp  Allocator.h  Allocator.hpp  Array.hpp  ArrayBits.hpp  ArrayBlocks.h  ArrayBlocks.hpp  ArrayBlocks_Iterators.h  ArrayBlocks_Iterators.hpp  Array_Functions.hpp  Array_Iterators.hpp  BasicIterator.h  BasicIterator.hpp  BitSet.hpp  Bits.hpp  Byte.hpp  ByteOrder.hpp  CMakeLists.txt  CircularVector.hpp  Files.cmake  FloatViewer.hpp  ForAll.h  HybridVector.hpp  InitializerList.hpp  IntegerIterator.hpp  Iterator.hpp  List.hpp  List_Functions.hpp  Macroses.hpp  ObjectViewer.hpp  Optional.hpp  Pointers.hpp  Pointers_BasicPointer.hpp  Pointers_Functions.h  Pointers_Functions.hpp  Pointers_SharedPointer.hpp  Pointers_UniquePointer.hpp  Serialization.hpp  SimpleAlgorithms.hpp  SimpleArray.h  (+18 more)
src/Tests/: Test.cpp  Test.h  Test.hpp  Test_Actions.cpp  Test_Analyzers.cpp  Test_Bus.cpp  Test_Filesystem.cpp  Test_Others.cpp  Test_Others_JSONLib.cpp  Test_Store.cpp  Test_Templates.cpp  main.cpp
src/Threads/: CMakeLists.txt  Files.cmake  MutexLocker.cpp  SemaphorePoster.cpp  SemaphoreWaiter.cpp  Sources.cmake  Thread.cpp
src/Ubjson/: Array.cpp  CMakeLists.txt  Object.cpp  Pair.cpp  Sources.cmake  String.cpp
tests/: CMakeLists.txt  Files.cmake  Headers.cmake  Makefile  Sources.cmake  Test.h  Test.hpp  global.pri  main.cpp  tests.pro
tests/All/: Templates_ArrayBlocks.cpp  Templates_ArrayBlocks.h  Templates_ArrayBlocks.pro  global.pri
tests/Templates/: ArrayBlocks.cpp  ArrayBlocks.h  ArrayBlocks.pro  Templates.pro
(+2023 files in other folders)
