cmake_minimum_required(VERSION 3.14)

set(SOURCE_MODULES
	${FLAME_SOURCE_SUBMODLUES_PATH}/Bus

	${FLAME_SOURCE_SUBMODLUES_PATH}/Crypto/Pkcs11
	${FLAME_SOURCE_SUBMODLUES_PATH}/Crypto/Pkcs11/MutexReal
	${FLAME_SOURCE_SUBMODLUES_PATH}/Crypto/Pkcs11/MutexStub

	${FLAME_SOURCE_SUBMODLUES_PATH}/Crypto/SoftPkcs11
	${FLAME_SOURCE_SUBMODLUES_PATH}/Crypto/SoftPkcs11/Functions
	${FLAME_SOURCE_SUBMODLUES_PATH}/Crypto/SoftPkcs11/Interface
	${FLAME_SOURCE_SUBMODLUES_PATH}/Crypto/SoftPkcs11/Mechanisms
	${FLAME_SOURCE_SUBMODLUES_PATH}/Crypto/SoftPkcs11/Mechanisms/Rsa

	${FLAME_SOURCE_SUBMODLUES_PATH}/Os
	${FLAME_SOURCE_SUBMODLUES_PATH}/Os/Posix
	${FLAME_SOURCE_SUBMODLUES_PATH}/Os/Windows

	${FLAME_SOURCE_SUBMODLUES_PATH}/Streams
	${FLAME_SOURCE_SUBMODLUES_PATH}/Streams/Posix
	${FLAME_SOURCE_SUBMODLUES_PATH}/Streams/Windows

	${FLAME_SOURCE_SUBMODLUES_PATH}/Threads
	${FLAME_SOURCE_SUBMODLUES_PATH}/Threads/Posix
	${FLAME_SOURCE_SUBMODLUES_PATH}/Threads/Windows

	${FLAME_SOURCE_SUBMODLUES_PATH}/Ubjson
)

foreach(module ${SOURCE_MODULES})
	add_subdirectory(${module})
endforeach()
