cmake_minimum_required(VERSION 3.14)

set(INSTALL_HEADER_SUBPATH "include/FlameIDE")

set(HEADER_MODULES
	${FLAME_INCLUDE_SUBMODLUES_PATH}/About
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Bus
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Common
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Common/Macros
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Common/OsTypes
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Common/Traits
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Constants

	${FLAME_INCLUDE_SUBMODLUES_PATH}/Crypto/Oasis
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Crypto/Pkcs11/Types
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Crypto/Pkcs11

	${FLAME_INCLUDE_SUBMODLUES_PATH}/Others

	${FLAME_INCLUDE_SUBMODLUES_PATH}/Templates/Allocator
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Templates/Iterator
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Templates/Serialization
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Templates

	${FLAME_INCLUDE_SUBMODLUES_PATH}/Threads

	${FLAME_INCLUDE_SUBMODLUES_PATH}/Streams/Async
	${FLAME_INCLUDE_SUBMODLUES_PATH}/Streams

	${FLAME_INCLUDE_SUBMODLUES_PATH}/Ubjson
)

foreach(module ${HEADER_MODULES})
	add_subdirectory(${module})
endforeach()
