cmake_minimum_required(VERSION 3.14)

set(NAME "Os")
set(NAME_ALIAS "${NAME}")
set(INCLUDE_PATHS ${FLAME_INCLUDE_PATH})

if("${FLAME_PLATFORM}" STREQUAL "Windows")
	set(DEPENDENCY_NETWORK_LIBRARY_STATIC ws2_32.lib)
endif()

set(DEPENDENCY_HEADER_TARGETS ${FLAME_NAMESPACE}::Os::Headers)
set(DEPENDENCY_TARGETS_FOR_STATIC
	"${FLAME_NAMESPACE}::${NAME}::${FLAME_PLATFORM}::Object"
	"${FLAME_NAMESPACE}::${NAME}::Threads::Object"
	"${FLAME_NAMESPACE}::${NAME}::Threads::${FLAME_PLATFORM}::Object"
	"${FLAME_NAMESPACE}::${NAME}::Network::Object"
	"${FLAME_NAMESPACE}::${NAME}::Network::${FLAME_PLATFORM}::Object"
	"${FLAME_NAMESPACE}::${NAME}::Async::Network::Object"
	"${FLAME_NAMESPACE}::${NAME}::Async::Network::${FLAME_PLATFORM}::Object"
	${DEPENDENCY_NETWORK_LIBRARY_STATIC}
	${CMAKE_DL_LIBS}
	${FLAME_DEPENDENCY_SHARED_LIBRARIES}
)
set(DEPENDENCY_TARGETS_FOR_SHARED
	"${FLAME_NAMESPACE}::${NAME}::${FLAME_PLATFORM}::Object::Independ"
	"${FLAME_NAMESPACE}::${NAME}::Threads::Object::Independ"
	"${FLAME_NAMESPACE}::${NAME}::Threads::${FLAME_PLATFORM}::Object::Independ"
	"${FLAME_NAMESPACE}::${NAME}::Network::Object::Independ"
	"${FLAME_NAMESPACE}::${NAME}::Network::${FLAME_PLATFORM}::Object::Independ"
	"${FLAME_NAMESPACE}::${NAME}::Async::Network::Object::Independ"
	"${FLAME_NAMESPACE}::${NAME}::Async::Network::${FLAME_PLATFORM}::Object::Independ"
	${DEPENDENCY_NETWORK_LIBRARY_STATIC}
	${FLAME_DEPENDENCY_SHARED_LIBRARIES}
	${CMAKE_DL_LIBS}
)

if(FLAME_MAKE_STATIC)
	set(MAKE_STATIC MAKE_STATIC)
endif()
if(FLAME_MAKE_SHARED)
	set(MAKE_SHARED MAKE_SHARED)
endif()

get_sources(FILE_LIST)
flame_compile_library(
	NAME "${NAME}"
	SOURCE_LIST "${FILE_LIST}"
	INCLUDE_PATHS "${INCLUDE_PATHS}"
	DEPENDENCY_HEADER_TARGETS "${DEPENDENCY_HEADER_TARGETS}"
	DEPENDENCY_TARGETS_FOR_STATIC "${DEPENDENCY_TARGETS_FOR_STATIC}"
	DEPENDENCY_TARGETS_FOR_SHARED "${DEPENDENCY_TARGETS_FOR_SHARED}"
	OBJECT_ALIAS_NAME
		"${FLAME_NAMESPACE}::${NAME_ALIAS}::Object"
	INDEPENDENT_OBJECT_ALIAS_NAME
		"${FLAME_NAMESPACE}::${NAME_ALIAS}::Object::Independ"
	STATIC_ALIAS_NAME "${FLAME_NAMESPACE}::${NAME}::Static"
	SHARED_ALIAS_NAME "${FLAME_NAMESPACE}::${NAME}::Shared"

	NO_RTTI
	NO_EXCEPTIONS

	${MAKE_STATIC}
	${MAKE_SHARED}
)

set(SOURCE_MODULES
	${CMAKE_CURRENT_LIST_DIR}/Async
	${CMAKE_CURRENT_LIST_DIR}/Posix
	${CMAKE_CURRENT_LIST_DIR}/Windows
	${CMAKE_CURRENT_LIST_DIR}/Threads
	${CMAKE_CURRENT_LIST_DIR}/Network
)
foreach(module ${SOURCE_MODULES})
	add_subdirectory(${module})
endforeach()
