cmake_minimum_required(VERSION 3.14)

set(NAME Threads)
set(INCLUDE_PATHS ${FLAME_INCLUDE_PATH})

set(DEPENDENCY_HEADER_TARGETS
	${FLAME_NAMESPACE}::Threads::Headers
)
set(DEPENDENCY_STATIC_TARGETS
	${FLAME_NAMESPACE}::${NAME}::${FLAME_PLATFORM}::Object
	${FLAME_DEPENDENCY_SHARED_LIBRARIES}
)
set(DEPENDENCY_SHARED_TARGETS
	${FLAME_NAMESPACE}::${NAME}::${FLAME_PLATFORM}::Object::Independ
	${FLAME_DEPENDENCY_SHARED_LIBRARIES}
)

if(FLAME_MAKE_STATIC)
	set(MAKE_STATIC MAKE_STATIC)
endif()
if(FLAME_MAKE_SHARED)
	set(MAKE_SHARED MAKE_SHARED)
endif()

get_sources(FILE_LIST)
flame_compile_library(
	NAME "${NAME}"
	SOURCE_LIST "${FILE_LIST}"
	INCLUDE_PATHS "${INCLUDE_PATHS}"
	DEPENDENCY_HEADER_TARGETS     "${DEPENDENCY_HEADER_TARGETS}"
	DEPENDENCY_TARGETS_FOR_STATIC "${DEPENDENCY_STATIC_TARGETS}"
	DEPENDENCY_TARGETS_FOR_SHARED "${DEPENDENCY_SHARED_TARGETS}"
	OBJECT_ALIAS_NAME "${FLAME_NAMESPACE}::${NAME}::Object"
	INDEPENDENT_OBJECT_ALIAS_NAME
		"${FLAME_NAMESPACE}::${NAME}::Object::Independ"
	STATIC_ALIAS_NAME "${FLAME_NAMESPACE}::${NAME}::Static"
	SHARED_ALIAS_NAME "${FLAME_NAMESPACE}::${NAME}::Shared"

	NO_RTTI
	NO_EXCEPTIONS

	${MAKE_SHARED}
	${MAKE_STATIC}
)

set(SOURCE_MODULES
	${CMAKE_CURRENT_LIST_DIR}/Posix
	${CMAKE_CURRENT_LIST_DIR}/Windows
)
foreach(module ${SOURCE_MODULES})
	add_subdirectory(${module})
endforeach()
