cmake_minimum_required(VERSION 3.14)

set(NAME "Crypto.Pkcs11")
set(SUBALIAS_NAME "Crypto::Pkcs11")
set(INCLUDE_PATHS ${FLAME_INCLUDE_PATH})

set(DEPENDENCY_HEADER_TARGETS
	"${FLAME_NAMESPACE}::Crypto::Pkcs11::Headers"
	"${FLAME_NAMESPACE}::Os::Headers"
	"${FLAME_NAMESPACE}::Templates::Headers"
)
set(DEPENDENCY_TARGETS_FOR_STATIC
	"${FLAME_NAMESPACE}::Os::Static"
	"${FLAME_NAMESPACE}::Crypto::Pkcs11::MutexReal::Object"
	"${FLAME_NAMESPACE}::Crypto::Pkcs11::Types::Structs::Object"
)
set(DEPENDENCY_TARGETS_FOR_SHARED
	"${FLAME_NAMESPACE}::Os::Shared"
	"${FLAME_NAMESPACE}::Crypto::Pkcs11::MutexReal::Object"
	"${FLAME_NAMESPACE}::Crypto::Pkcs11::Types::Structs::Object"
)

if(FLAME_MAKE_STATIC)
	set(MAKE_STATIC MAKE_STATIC)
endif()
if(FLAME_MAKE_SHARED)
	set(MAKE_SHARED MAKE_SHARED)
endif()

get_sources(FILE_LIST)

# TODO: добавить возможность для библиотек отдельно задавать объединяемые объектники

flame_compile_library(
	NAME "${NAME}"
	SOURCE_LIST "${FILE_LIST}"
	INCLUDE_PATHS "${INCLUDE_PATHS}"
	DEPENDENCY_HEADER_TARGETS     "${DEPENDENCY_HEADER_TARGETS}"
	DEPENDENCY_TARGETS_FOR_STATIC "${DEPENDENCY_TARGETS_FOR_STATIC}"
	DEPENDENCY_TARGETS_FOR_SHARED "${DEPENDENCY_TARGETS_FOR_SHARED}"
	OBJECT_ALIAS_NAME "${FLAME_NAMESPACE}::${NAME}::Object"
	INDEPENDENT_OBJECT_ALIAS_NAME
		"${FLAME_NAMESPACE}::${SUBALIAS_NAME}::Object::Independ"
	STATIC_ALIAS_NAME "${FLAME_NAMESPACE}::${SUBALIAS_NAME}::Static"
	SHARED_ALIAS_NAME "${FLAME_NAMESPACE}::${SUBALIAS_NAME}::Shared"

	NO_RTTI
	NO_EXCEPTIONS

	${MAKE_SHARED}
	${MAKE_STATIC}
)

set(NAME "Crypto.Pkcs11.NoThread")
set(SUBALIAS_NAME "Crypto::Pkcs11::NoThread")
set(DEPENDENCY_HEADER_TARGETS
	"${FLAME_NAMESPACE}::Crypto::Pkcs11::Headers"
)
set(DEPENDENCY_TARGETS_FOR_STATIC
	"${FLAME_NAMESPACE}::Os::Static"
	"${FLAME_NAMESPACE}::Crypto::Pkcs11::MutexStub::Object"
	"${FLAME_NAMESPACE}::Crypto::Pkcs11::Types::Structs::Object"
)
set(DEPENDENCY_TARGETS_FOR_SHARED
	"${FLAME_NAMESPACE}::Os::Shared"
	"${FLAME_NAMESPACE}::Crypto::Pkcs11::MutexStub::Object::Independ"
	"${FLAME_NAMESPACE}::Crypto::Pkcs11::Types::Structs::Object::Independ"
)
flame_compile_library(
	NAME "${NAME}"
	SOURCE_LIST "${FILE_LIST}"
	INCLUDE_PATHS "${INCLUDE_PATHS}"
	DEPENDENCY_HEADER_TARGETS     "${DEPENDENCY_HEADER_TARGETS}"
	DEPENDENCY_TARGETS_FOR_STATIC "${DEPENDENCY_TARGETS_FOR_STATIC}"
	DEPENDENCY_TARGETS_FOR_SHARED "${DEPENDENCY_TARGETS_FOR_SHARED}"
	OBJECT_ALIAS_NAME "${FLAME_NAMESPACE}::${SUBALIAS_NAME}::Object"
	INDEPENDENT_OBJECT_ALIAS_NAME
		"${FLAME_NAMESPACE}::${SUBALIAS_NAME}::Object::Independ"
	STATIC_ALIAS_NAME "${FLAME_NAMESPACE}::${SUBALIAS_NAME}::Static"
	SHARED_ALIAS_NAME "${FLAME_NAMESPACE}::${SUBALIAS_NAME}::Shared"

	NO_RTTI
	NO_EXCEPTIONS

	${MAKE_SHARED}
	${MAKE_STATIC}
)

set(SOURCE_MODULES
	${CMAKE_CURRENT_LIST_DIR}/MutexReal
	${CMAKE_CURRENT_LIST_DIR}/MutexStub
	${CMAKE_CURRENT_LIST_DIR}/Types
)
foreach(module ${SOURCE_MODULES})
	add_subdirectory(${module})
endforeach()
