cmake_minimum_required(VERSION 3.14)

set(NAME Handler.Network)
set(NAME_ALIAS Handler::Network)
set(INCLUDE_PATHS ${FLAME_INCLUDE_PATH})

set(DEPENDENCY_HEADER_TARGETS
	${FLAME_NAMESPACE}::Handler::Network::Headers
)
set(DEPENDENCY_TARGETS_FOR_STATIC
	"${FLAME_NAMESPACE}::${NAME_ALIAS}::Udp::Object"
	"${FLAME_NAMESPACE}::${NAME_ALIAS}::Tcp::Object"
	"${FLAME_NAMESPACE}::Os::Static"
)
set(DEPENDENCY_TARGETS_FOR_SHARED
	"${FLAME_NAMESPACE}::${NAME_ALIAS}::Udp::Object::Independ"
	"${FLAME_NAMESPACE}::${NAME_ALIAS}::Tcp::Object::Independ"
	"${FLAME_NAMESPACE}::Os::Shared"
)

if(FLAME_MAKE_STATIC)
	set(MAKE_STATIC MAKE_STATIC)
endif()
if(FLAME_MAKE_SHARED)
	set(MAKE_SHARED MAKE_SHARED)
endif()

get_sources(FILE_LIST)
flame_compile_library(
	NAME "${NAME}"
	SOURCE_LIST "${FILE_LIST}"
	INCLUDE_PATHS "${INCLUDE_PATHS}" "${GENERATED_INCLUDE_PATH}"
	DEPENDENCY_HEADER_TARGETS "${DEPENDENCY_HEADER_TARGETS}"
	DEPENDENCY_TARGETS_FOR_STATIC "${DEPENDENCY_TARGETS_FOR_STATIC}"
	DEPENDENCY_TARGETS_FOR_SHARED "${DEPENDENCY_TARGETS_FOR_SHARED}"
	OBJECT_ALIAS_NAME
		"${FLAME_NAMESPACE}::${NAME_ALIAS}::Object"
	INDEPENDENT_OBJECT_ALIAS_NAME
		"${FLAME_NAMESPACE}::${NAME_ALIAS}::Object::Independ"
	STATIC_ALIAS_NAME "${FLAME_NAMESPACE}::${NAME_ALIAS}::Static"
	SHARED_ALIAS_NAME "${FLAME_NAMESPACE}::${NAME_ALIAS}::Shared"

	NO_RTTI
	NO_EXCEPTIONS

	${MAKE_STATIC}
	${MAKE_SHARED}
)

set(SOURCE_MODULES
	${CMAKE_CURRENT_LIST_DIR}/Udp
	${CMAKE_CURRENT_LIST_DIR}/Tcp
)
foreach(module ${SOURCE_MODULES})
	add_subdirectory(${module})
endforeach()
