cmake_minimum_required(VERSION 3.14)

set(SOURCE_MODULES
	${CMAKE_CURRENT_LIST_DIR}/Threads
)
foreach(module ${SOURCE_MODULES})
	add_subdirectory(${module})
endforeach()

if(NOT ("${FLAME_PLATFORM}" STREQUAL "Windows"))
	return()
endif()

set(NAME "Os.${FLAME_PLATFORM}")
set(NAME_ALIAS "Os::${FLAME_PLATFORM}")
set(INCLUDE_PATHS ${FLAME_INCLUDE_PATH})

set(DEPENDENCY_HEADER_TARGETS ${FLAME_NAMESPACE}::Os::Headers)

get_sources(FILE_LIST)
flame_compile_library(
	NAME "${NAME}"
	SOURCE_LIST "${FILE_LIST}"
	INCLUDE_PATHS "${INCLUDE_PATHS}"
	DEPENDENCY_HEADER_TARGETS "${DEPENDENCY_HEADER_TARGETS}"
	OBJECT_ALIAS_NAME
		"${FLAME_NAMESPACE}::${NAME_ALIAS}::Object"
	INDEPENDENT_OBJECT_ALIAS_NAME
		"${FLAME_NAMESPACE}::${NAME_ALIAS}::Object::Independ"

	NO_RTTI
	NO_EXCEPTIONS
)
